tests/Fixtures/views/errors/runtime_capture.tpl
<h1>Header</h1>
{capture name="buf"}
  <p>{$user->getAuthIdentifier()}</p>
{/capture}
{$smarty.capture.buf}
